wat ik tot nu toe had

--- a/index.html
+++ b/index.html
@@ -11,6 +11,191 @@
     </head>
 
     <body>
+      <div class="container">
+<!--Slide menu-->
+      	<ul id="slide-out" class="side-nav">
+    		<li>
+    			<div class="userView">
+      				<div class="background">
+        			<img src="images/office.jpg">
+      				</div>
+      			<a href="#!user"><img class="circle" src="images/johndoe.jpg"></a>
+      			<a href="#!name"><span class="white-text name">John Doe</span></a>
+     			<a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+    			</div>
+    		</li>
+    		<li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+    		<li><a href="#!">Second Link</a></li>
+    		<li><div class="divider"></div></li>
+    		<li><a class="subheader">Subheader</a></li>
+    		<li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+  		</ul>
+  		<a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+    		
+<!--Het hok waarin de gebruiker staat met foto en aantal meldingen-->
+    	<ul class="collection">
+    		<li class="collection-item avatar">
+      		<img src="images/johndoe.png" alt="" class="circle">     			
+      			<span class="title">Welkom John</span>
+      			<p>Er staan nieuwe berichten voor je klaar
+      			</p>
+      			<!--<a href="#!" class="secondary-content"><p>4 nieuwe berichten</p></a>-->
+      			<a href="#!" class="secondary-content"><span class="new badge">4</span></a>
+      		</li>
+    	</ul>
+<!--De losse categorie-cards-->
+    	
+      	<div class="row">
+        	<div class="col s12 m6">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+
+        	<div class="col s12 m6">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+      	</div>
+
+      	<div class="row">
+        	<div class="col s12 m6">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+
+        	<div class="col s12 m6">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+      	</div>
+
+      	<div class="row">
+        	<div class="col s12 m6">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+
+        	<div class="col s12 m6">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+      	</div>
+
+      	<div class="row">
+        	<div class="col s12 m6">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+
+        	<div class="col s12 m6">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+      	</div>
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -18,3 +203,5 @@
       <script type="text/javascript" src="js/introjavascript.js"></script>
     </body>
   </html>
+
+  
