--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <!--De losse categorie-cards-->
     	
       	<div class="row">
-        	<div class="col s12 m6">
+        	<div class="col s12 m4">
           		<div class="card">
             		<a href="#">
             		<div class="card-image">
@@ -64,7 +64,7 @@
           		</div>
        		 </div>
 
-        	<div class="col s12 m6">
+        	<div class="col s12 m4">
           		<div class="card">
             		<a href="#">
             		<div class="card-image">
@@ -81,48 +81,10 @@
             		</div>
           		</div>
        		 </div>
-      	</div>
+      	<!--</div>
 
-      	<div class="row">
-        	<div class="col s12 m6">
-          		<div class="card">
-            		<a href="#">
-            		<div class="card-image">
-              		<img src="images/vervoer.jpg">
-              		<span class="card-title">Vervoer</span>
-            		</div>
-            		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
-            		</div>
-            		</a>
-            		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
-            		</div>
-          		</div>
-       		 </div>
-
-        	<div class="col s12 m6">
-          		<div class="card">
-            		<a href="#">
-            		<div class="card-image">
-              		<img src="images/vervoer.jpg">
-              		<span class="card-title">Vervoer</span>
-            		</div>
-            		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
-            		</div>
-            		</a>
-            		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
-            		</div>
-          		</div>
-       		 </div>
-      	</div>
-
-      	<div class="row">
-        	<div class="col s12 m6">
+      	<div class="row">-->
+        	<div class="col s12 m4">
           		<div class="card">
             		<a href="#">
             		<div class="card-image">
@@ -140,27 +102,7 @@
           		</div>
        		 </div>
 
-        	<div class="col s12 m6">
-          		<div class="card">
-            		<a href="#">
-            		<div class="card-image">
-              		<img src="images/vervoer.jpg">
-              		<span class="card-title">Vervoer</span>
-            		</div>
-            		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
-            		</div>
-            		</a>
-            		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
-            		</div>
-          		</div>
-       		 </div>
-      	</div>
-
-      	<div class="row">
-        	<div class="col s12 m6">
+        	<div class="col s12 m4">
           		<div class="card">
             		<a href="#">
             		<div class="card-image">
@@ -178,7 +120,61 @@
           		</div>
        		 </div>
 
-        	<div class="col s12 m6">
+        	<div class="col s12 m4">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+
+        	<div class="col s12 m4">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+      	
+        	<div class="col s12 m4">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/vervoer.jpg">
+              		<span class="card-title">Vervoer</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+
+        	<div class="col s12 m4">
           		<div class="card">
             		<a href="#">
             		<div class="card-image">
