--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     		<li class="collection-item avatar">
       		<img src="images/johndoe.png" alt="" class="circle">     			
       			<span class="title">Welkom John</span>
-      			<p>Er staan nieuwe berichten voor je klaar
-      			</p>
+      			<p>Er staan nieuwe berichten voor je klaar</p>
       			<!--<a href="#!" class="secondary-content"><p>4 nieuwe berichten</p></a>-->
       			<a href="#!" class="secondary-content"><span class="new badge">4</span></a>
       		</li>
@@ -68,8 +67,8 @@
           		<div class="card">
             		<a href="#">
             		<div class="card-image">
-              		<img src="images/vervoer.jpg">
-              		<span class="card-title">Vervoer</span>
+              		<img src="images/onderwijs.jpg">
+              		<span class="card-title">Onderwijs</span>
             		</div>
             		<div class="card-content">              		
               		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
@@ -88,8 +87,8 @@
           		<div class="card">
             		<a href="#">
             		<div class="card-image">
-              		<img src="images/vervoer.jpg">
-              		<span class="card-title">Vervoer</span>
+              		<img src="images/financien.jpg">
+              		<span class="card-title">Financien</span>
             		</div>
             		<div class="card-content">              		
               		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
