--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             		<a href="#">
             		<div class="card-image">
               		<img src="images/vervoer.jpg">
-              		<span class="card-title">Vervoer</span>
+              		<span class="card-title">Arbeid</span>
             		</div>
             		<div class="card-content">              		
               		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
