Alle foto's toegevoegd

--- a/index.html
+++ b/index.html
@@ -49,8 +49,62 @@
           		<div class="card">
             		<a href="#">
             		<div class="card-image">
-              		<img src="images/vervoer.jpg">
-              		<span class="card-title">Arbeid</span>
+              		<img src="images/arbeidsmarkt.jpg">
+              		<span class="card-title">Arbeidsmarkt</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+
+        	<div class="col s12 m4">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/financien.jpg">
+              		<span class="card-title">Financi&#235;n</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+
+        	<div class="col s12 m4">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/gemeentezaken.jpg">
+              		<span class="card-title">Gemeentezaken</span>
+            		</div>
+            		<div class="card-content">              		
+              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
+              		I am convenient because I require little markup to use effectively.</p>
+            		</div>
+            		</a>
+            		<div class="card-action">
+              		<a href="#">Ga naar categorie</a>
+            		</div>
+          		</div>
+       		 </div>
+
+        	<div class="col s12 m4">
+          		<div class="card">
+            		<a href="#">
+            		<div class="card-image">
+              		<img src="images/huisvesting.jpg">
+              		<span class="card-title">Huisvesting</span>
             		</div>
             		<div class="card-content">              		
               		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
@@ -69,62 +123,6 @@
             		<div class="card-image">
               		<img src="images/onderwijs.jpg">
               		<span class="card-title">Onderwijs</span>
-            		</div>
-            		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
-            		</div>
-            		</a>
-            		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
-            		</div>
-          		</div>
-       		 </div>
-      	<!--</div>
-
-      	<div class="row">-->
-        	<div class="col s12 m4">
-          		<div class="card">
-            		<a href="#">
-            		<div class="card-image">
-              		<img src="images/financien.jpg">
-              		<span class="card-title">Financien</span>
-            		</div>
-            		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
-            		</div>
-            		</a>
-            		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
-            		</div>
-          		</div>
-       		 </div>
-
-        	<div class="col s12 m4">
-          		<div class="card">
-            		<a href="#">
-            		<div class="card-image">
-              		<img src="images/vervoer.jpg">
-              		<span class="card-title">Vervoer</span>
-            		</div>
-            		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
-            		</div>
-            		</a>
-            		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
-            		</div>
-          		</div>
-       		 </div>
-
-        	<div class="col s12 m4">
-          		<div class="card">
-            		<a href="#">
-            		<div class="card-image">
-              		<img src="images/vervoer.jpg">
-              		<span class="card-title">Vervoer</span>
             		</div>
             		<div class="card-content">              		
               		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
@@ -159,8 +157,8 @@
           		<div class="card">
             		<a href="#">
             		<div class="card-image">
-              		<img src="images/vervoer.jpg">
-              		<span class="card-title">Vervoer</span>
+              		<img src="images/zorg.jpg">
+              		<span class="card-title">Zorg</span>
             		</div>
             		<div class="card-content">              		
               		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
@@ -177,8 +175,8 @@
           		<div class="card">
             		<a href="#">
             		<div class="card-image">
-              		<img src="images/vervoer.jpg">
-              		<span class="card-title">Vervoer</span>
+              		<img src="images/overig.jpg">
+              		<span class="card-title">Overig</span>
             		</div>
             		<div class="card-content">              		
               		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
