Alle foto's toegevoegd

--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
               		<span class="card-title">Arbeidsmarkt</span>
             		</div>
             		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
+              		<p  style="color:rgba(0,0,0,0.87)">Informatie over hoe er werk gevonden kan worden en een overzicht van organisaties die hierbij kunnen helpen. </p>
             		</div>
             		</a>
             		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
+              		<a href="arbeidsmarkt.html">Ga naar Arbeidsmarkt</a>
             		</div>
           		</div>
        		 </div>
@@ -71,12 +70,11 @@
               		<span class="card-title">Financi&#235;n</span>
             		</div>
             		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
+              		<p  style="color:rgba(0,0,0,0.87)">Informatie over het opzetten en beheren van uw financi&#235;n en de financi&#235;le verplichtingen die hierbij komen kijken.</p>
             		</div>
             		</a>
             		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
+              		<a href="financien.html">Ga naar Financi&#235;n</a>
             		</div>
           		</div>
        		 </div>
@@ -89,12 +87,11 @@
               		<span class="card-title">Gemeentezaken</span>
             		</div>
             		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
+              		<p  style="color:rgba(0,0,0,0.87)">Informatie over veel verschillende zaken die betrekking hebben op de gemeente waar u in woont. </p>
             		</div>
             		</a>
             		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
+              		<a href="gemeentezaken.html">Ga naar Gemeentezaken</a>
             		</div>
           		</div>
        		 </div>
@@ -107,12 +104,11 @@
               		<span class="card-title">Huisvesting</span>
             		</div>
             		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
+              		<p style="color:rgba(0,0,0,0.87)">Informatie over de zaken die van belang zijn bij het vinden en kopen of huren van een geschikte woonruimte.</p>
             		</div>
             		</a>
             		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
+              		<a href="huisvesting.html">Ga naar Huisvesting</a>
             		</div>
           		</div>
        		 </div>
@@ -125,12 +121,11 @@
               		<span class="card-title">Onderwijs</span>
             		</div>
             		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
+              		<p  style="color:rgba(0,0,0,0.87)">Informatie over het onderwijs. Verder informatie met betrekking tot het aanmelden bij en volgen van een opleiding die bij u past. <br></p>
             		</div>
             		</a>
             		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
+              		<a href="onderwijs.html">Ga naar Onderwijs</a>
             		</div>
           		</div>
        		 </div>
@@ -142,13 +137,12 @@
               		<img src="images/vervoer.jpg">
               		<span class="card-title">Vervoer</span>
             		</div>
-            		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
+            		<div class="card-content">
+              		<p  style="color:rgba(0,0,0,0.87)">Informatie met betrekking tot vervoer in Nederland, zoals het openbaar vervoer en  ( het aanschaffen van ) de auto. </p>
             		</div>
             		</a>
             		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
+              		<a href="vervoer.html">Ga naar Vervoer</a>
             		</div>
           		</div>
        		 </div>
@@ -161,12 +155,11 @@
                         <span class="card-title">Zorg</span>
             		</div>
             		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)"> I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
+              		<p  style="color:rgba(0,0,0,0.87)">Informatie met betrekking tot de zorg in Nederland, zoals ziekenhuizen, verzekeringen, dokters enz.</p>
             		</div>
             		</a>
             		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
+              		<a href="zorg.html">Ga naar Zorg</a>
             		</div>
           		</div>
        		 </div>
@@ -179,12 +172,11 @@
               		<span class="card-title">Overig</span>
             		</div>
             		<div class="card-content">              		
-              		<p  style="color:rgba(0,0,0,0.87)">I am a very simple card. I am good at containing small bits of information.
-              		I am convenient because I require little markup to use effectively.</p>
+              		<p  style="color:rgba(0,0,0,0.87)">Alle overige informatie die niet in een van de andere categorie&#235;n past, maar wel voor u van belang is. </p>
             		</div>
             		</a>
             		<div class="card-action">
-              		<a href="#">Ga naar categorie</a>
+              		<a href="overig.html">Ga naar Overig</a>
             		</div>
           		</div>
        		 </div>
