Alle foto's toegevoegd

--- a/arbeidsmarkt.html
+++ b/arbeidsmarkt.html
@@ -5,7 +5,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
+    <link type="text/css" rel="stylesheet" href="css/materialize.css"  media="screen,projection"/>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -23,16 +23,15 @@
         </ul>
     </div>
 </nav>
-
-<div class>
-    <div class="col s6 m3">
+<div class="row">
+    <div class="col s6">
         <div class="card-panel">
-            <span class="black-text" style="font-size:11pt"><b>Uitzendbureaus</b><br>Er zijn verschillende uitzendbureaus in Nederland die u kunnen helpen met een baan te vinden. Voor meer informatie klik hier.</span>
+            <span class="black-text" style="font-size:9pt"><b>Uitzendbureaus</b><br>Er zijn verschillende uitzendbureaus in Nederland die u kunnen helpen met een baan te vinden. Voor meer informatie klik hier.</span>
         </div>
     </div>
-    <div class="col s6 m3">
+    <div class="col s6">
         <div class="card-panel">
-        <span class="black-text" style="font-size:11pt"><b>Uitzendbureaus</b><br>Er zijn verschillende uitzendbureaus in Nederland die u kunnen helpen met een baan te vinden. Voor meer informatie klik hier.</span>
+        <span class="black-text" style="font-size:9pt"><b>Uitzendbureaus</b><br>Er zijn verschillende uitzendbureaus in Nederland die u kunnen helpen met een baan te vinden. Voor meer informatie klik hier.</span>
         </div>
     </div>
 </div>
