Alle foto's toegevoegd

--- a/arbeidsmarkt.html
+++ b/arbeidsmarkt.html
@@ -26,14 +26,27 @@
 <div class="row">
     <div class="col s6">
         <div class="card-panel">
-            <span class="black-text" style="font-size:9pt"><b>Uitzendbureaus</b><br>Er zijn verschillende uitzendbureaus in Nederland die u kunnen helpen met een baan te vinden. Voor meer informatie klik hier.</span>
+            <span class="flow-text" style="font-size:9pt"><b>Uitzendbureaus</b><br>Er zijn verschillende uitzendbureaus in Nederland die u kunnen helpen met een baan te vinden. Voor meer informatie klik hier.</span>
         </div>
     </div>
     <div class="col s6">
         <div class="card-panel">
-        <span class="black-text" style="font-size:9pt"><b>Uitzendbureaus</b><br>Er zijn verschillende uitzendbureaus in Nederland die u kunnen helpen met een baan te vinden. Voor meer informatie klik hier.</span>
+        <span class="flow-text" style="font-size:9pt"><b>Uitzendbureaus</b><br>Er zijn verschillende uitzendbureaus in Nederland die u kunnen helpen met een baan te vinden. Voor meer informatie klik hier.</span>
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col s6">
+        <div class="card-panel">
+            <span class="flow-text" style="font-size:9pt"><b>Uitzendbureaus</b><br>Er zijn verschillende uitzendbureaus in Nederland die u kunnen helpen met een baan te vinden. Voor meer informatie klik hier.</span>
+        </div>
+    </div>
+    <div class="col s6">
+        <div class="card-panel">
+            <span class="flow-text" style="font-size:9pt"><b>Uitzendbureaus</b><br>Er zijn verschillende uitzendbureaus in Nederland die u kunnen helpen met een baan te vinden. Voor meer informatie klik hier.</span>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
