--- a/arbeidsmarkt.html
+++ b/arbeidsmarkt.html
@@ -47,6 +47,25 @@
         </div>
     </div>
 </div>
+<div class="card blue-grey darken-1">
+    <div class="card-content white-text">
+        <span class="card-title" style="font-size:15pt">Wat is het beste uitzendbureau?</span>
+        <p>Antwoord 1 <br> Antwoord 2</p>
+    </div>
+    <div class="card-action">
+        <a href="#">Bekijk de 2 nieuwe antwoorden</a>
 
+    </div>
+</div>
+<div class="card blue-grey darken-1">
+    <div class="card-content white-text">
+        <span class="card-title" style="font-size:15pt">Wat is het beste uitzendbureau?</span>
+        <p>Antwoord 1 <br> Antwoord 2</p>
+    </div>
+    <div class="card-action">
+        <a href="#">Bekijk de 2 nieuwe antwoorden</a>
+
+    </div>
+</div>
 </body>
 </html>
